# Home_work_of_cpp

./: 1100C.cpp  1404A.cpp  1512C.cpp  1670B.cpp  CMakeLists.txt  README.md  enum_test.cpp  for_test.cpp  hw-05-01.cpp  test_geom.cpp  test_num_in_area.cpp  test_sum.cpp  test_words.cpp
trafnyak_s_l/: 0136b.cpp  0935b.cpp  1017a.cpp  1165b.cpp  1512b.cpp  1559a.cpp  1669d.cpp  1675c.cpp  1678a.cpp  1690d.cpp  1699B.cpp  1734b.cpp  1744d.cpp  579a.cpp  879b.cpp  886b.cpp  bpm_22_2_1.cpp  bpm_22_2_2.cpp  bpm_22_2_3.cpp  hw-05-01.cpp  hw-05-02.cpp  hw-05-03.cpp
trafnyak_s_l/cat_and_mouse/: CMakeLists.txt  main.cpp
trafnyak_s_l/cat_and_mouse/geom/: geom.cpp  geom.hpp
trafnyak_s_l/geom/: CMakeLists.txt  geom.cpp  geom.hpp
