cmake_minimum_required(VERSION 3.23)
project(home_work)

set(CMAKE_CXX_STANDARD 17)

add_executable(1670B 1670B.cpp)
add_executable(1512C 1512C.cpp)
add_executable(1404A 1404A.cpp)
add_executable(1100C 1100C.cpp)

add_executable(hw-05-01 trafnyak_s_l/hw-05-01.cpp)
add_executable(hw-05-02 trafnyak_s_l/hw-05-02.cpp)
add_executable(hw-05-03 trafnyak_s_l/hw-05-03.cpp)
add_executable(1734b trafnyak_s_l/1734b.cpp)
add_executable(1559a trafnyak_s_l/1559a.cpp)

#for_class_work
add_executable(136B trafnyak_s_l/0136b.cpp)
add_executable(0935b trafnyak_s_l/0935b.cpp)
add_executable(1678a trafnyak_s_l/1678a.cpp)
add_executable(1512b trafnyak_s_l/1512b.cpp)
add_executable(1690d trafnyak_s_l/1690d.cpp)