cmake_minimum_required(VERSION 3.23)
project(home_work)

set(CMAKE_CXX_STANDARD 17)

add_executable(test for_test.cpp)
add_executable(test_sum test_sum.cpp)
add_executable(test_num_in_area test_num_in_area.cpp)
add_executable(test_words test_words.cpp)
add_executable(geom test_geom.cpp)

add_executable(1670B 1670B.cpp)
add_executable(1512C 1512C.cpp)
add_executable(1404A 1404A.cpp)
add_executable(1100C 1100C.cpp)

add_executable(hw-05-01 trafnyak_s_l/hw-05-01.cpp)
add_executable(hw-05-02 trafnyak_s_l/hw-05-02.cpp)
add_executable(hw-05-03 trafnyak_s_l/hw-05-03.cpp)
add_executable(1734b trafnyak_s_l/1734b.cpp)
add_executable(1559a trafnyak_s_l/1559a.cpp)

#for_class_work
add_executable(136B trafnyak_s_l/0136b.cpp)
add_executable(0935b trafnyak_s_l/0935b.cpp)
add_executable(1678a trafnyak_s_l/1678a.cpp)
add_executable(1512b trafnyak_s_l/1512b.cpp)
add_executable(1690d trafnyak_s_l/1690d.cpp)
add_executable(1669d trafnyak_s_l/1669d.cpp)
add_executable(1675c trafnyak_s_l/1675c.cpp)
add_executable(1744d trafnyak_s_l/1744d.cpp)
add_executable(579a trafnyak_s_l/579a.cpp)
add_executable(1699B trafnyak_s_l/1699B.cpp)
add_executable(879B trafnyak_s_l/879b.cpp)
add_executable(1165B trafnyak_s_l/1165b.cpp)
add_executable(886B trafnyak_s_l/886b.cpp)
add_executable(1017a trafnyak_s_l/1017a.cpp)